k8s/monitoring/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: streamforge

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          ports:
            - containerPort: 3000

          volumeMounts:
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources

      volumes:
        - name: datasources
          configMap:
            name: grafana-datasources
