k8s/monitoring/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: streamforge

spec:
  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
