k8s/monitoring/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: streamforge

spec:
  ingressClassName: nginx

  rules:
    - host: grafana.streamforge.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: grafana

                port:
                  number: 3000
